# ai-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.md  compose.yaml  shuang-plan.md  start-learn.sh  start-skill-studio.sh
portfolio/agent-platform/: .dockerignore  Dockerfile  README.md  notes-fastapi.md  notes-qdrant.md  pyproject.toml
portfolio/agent-platform/capabilities/deep-research/: README.md
portfolio/agent-platform/data/: eval_dataset.jsonl  retrieval_eval_dataset.jsonl  verification_eval_dataset.jsonl
portfolio/agent-platform/docs/: answer-strategy.md  architecture.md  document-chunking-strategy.md  document-parsing-strategy.md  rag-pipeline.md  rerank-strategy.md  verified-knowledge-flow.md
portfolio/agent-platform/project-forge/: runs.json
portfolio/agent-platform/src/agent_platform/: __init__.py  agent.py  api.py  approval.py  book_parser.py  chunking.py  deep_research.py  document_parser.py  embeddings.py  evaluation.py  forge_context.py  forge_store.py  forge_supervisor.py  graph_orchestrator.py  java_tools.py  knowledge_base.py  llm.py  models.py  project_forge.py  retrieval.py  safety.py  session.py  (+6 more)
portfolio/agent-platform/tests/: test_agent_core.py  test_api.py  test_approval.py  test_chunking.py  test_deep_research.py  test_document_parser.py  test_embeddings.py  test_forge_extended.py  test_graph_orchestrator.py  test_hybrid_retrieval.py  test_java_tools.py  test_llm.py  test_project_forge.py  test_safety.py  test_session.py  test_streaming.py  test_vector_store.py  test_web_search_and_forge_context.py  test_wechat_article.py
(+529 files in other folders)
