[project]
name = "agent-platform"
version = "0.1.0"
description = "Python-led AI Agent/RAG portfolio core"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx2>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
