[project]
name = "agent-platform"
version = "0.1.0"
description = "Python AI Agent/RAG core for Java business tool integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx2>=2.0,<3.0",
    "uvicorn>=0.34,<1.0",
    "pypdf>=5.0,<6.0",
    "pymupdf>=1.24,<2.0",
    "python-multipart>=0.0.9,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
